Upercase first letter

--- a/content/_posts/2011-08-23-spoon.markdown
+++ b/content/_posts/2011-08-23-spoon.markdown
@@ -6,11 +6,11 @@ tags:
 - Camping
 - Fun
 - Knife skills
-- hand made
-- soon
-- spoon knife
-- tree
-- would
+- Hand made
+- Soon
+- Spoon knife
+- Tree
+- Would
 ---
 
 It still needs some work to smooth out the handle and round the top off as well as sanding the dip out but I've made a pretty decent start on a spoon.
