--- a/content/_posts/2011-08-23-spoon.markdown
+++ b/content/_posts/2011-08-23-spoon.markdown
@@ -10,25 +10,18 @@ tags:
 - Soon
 - Spoon knife
 - Tree
-- Would
 ---
 
 It still needs some work to smooth out the handle and round the top off as well as sanding the dip out but I've made a pretty decent start on a spoon.
 
 This started out as part of a tree trunk which got removed and split with an axe, from there all the work has been done with 3 knives:
 
-
-
-    
-  * Spoon knife - for rounding the handle and scraping out the dip
-
-    
-  * 9" knife - for taking off the thick outer and bark
-
-    
-  * Gerber STL 2.5 knife - for taking tiny slivers off the handle and smoothing out some of the head
-
-
+* Spoon knife - for rounding the handle and scraping out the dip
+* 9" knife - for taking off the thick outer and bark
+* Gerber STL 2.5 knife - for taking tiny slivers off the handle and smoothing out some of the head
 
 Here are some "early" (4/5 days of on and off work) pictures...
-[gallery]
+
+{% postfile IMG_0020.jpg %} {% postfile IMG_0021.jpg %} {% postfile IMG_0022.jpg %}
+{% postfile IMG_0023.jpg %} {% postfile IMG_0024.jpg %} {% postfile IMG_0027.jpg %}
+{% postfile IMG_0028.jpg %}
